<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".ui.opus.OpusDecodeFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_audio_pp"
        style="@style/CommonButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/audio_play"
        android:textSize="@dimen/text_16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_decode"
        app:layout_constraintEnd_toEndOf="@+id/btn_decode"
        app:layout_constraintStart_toStartOf="@+id/btn_decode" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_decode"
        style="@style/CommonButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/start_decoding"
        android:textSize="@dimen/text_16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_select_file"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_corner_8_white_shape"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/cl_decode_param"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1">

        <TextView
            android:id="@+id/tv_select_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/select_file"
            android:textColor="@color/black"
            android:textSize="@dimen/text_15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_refresh_blue"
            android:padding="4dp"
            android:layout_marginEnd="8dp"
            android:background="@color/transparent_color"
            app:layout_constraintTop_toTopOf="@+id/tv_select_file"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/tv_select_file"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_opus_file"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_select_file"
            app:layout_constraintTop_toBottomOf="@+id/tv_select_file"
            tools:itemCount="4"
            tools:listitem="@layout/item_select_file"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_decode_param"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/bg_corner_8_white_shape"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_audio_pp"
        app:layout_constraintEnd_toEndOf="@+id/cl_select_file"
        app:layout_constraintStart_toStartOf="@+id/cl_select_file"
        app:layout_constraintTop_toBottomOf="@+id/cl_select_file"
        app:layout_constraintVertical_weight="1">

        <ScrollView
            android:id="@+id/sv_param_content"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_decode_param"
            app:layout_constraintTop_toBottomOf="@+id/tv_decode_param"
            app:layout_constraintVertical_bias="0.6">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/cb_has_headers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/whether_has_headers"
                    android:textSize="@dimen/text_14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/ll_packet_len"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/cb_has_headers">

                    <TextView
                        android:id="@+id/tv_packet_len"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/packet_len"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_packet"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1"
                        android:inputType="number"
                        android:text="40"
                        android:textColor="@color/blue_204DFD"
                        android:textSize="@dimen/text_14sp"
                        tools:ignore="Autofill,LabelFor" />

                    <TextView
                        android:id="@+id/tv_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Byte"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_14sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/ll_sample_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="4dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/ll_packet_len">

                    <TextView
                        android:id="@+id/tv_sample_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/audio_sample_rate"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_14sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinner_sample_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:entries="@array/sample_rate_list"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/ll_channel_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="4dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/ll_sample_rate">

                    <TextView
                        android:id="@+id/tv_channel_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/channel_num"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_14sp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/rg_channel_num"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:checkedButton="@id/rbtn_single_channel">

                        <RadioButton
                            android:id="@+id/rbtn_single_channel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/single_channel"
                            android:textSize="@dimen/text_13sp"/>

                        <RadioButton
                            android:id="@+id/rbtn_dual_channel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/dual_channel"
                            android:textSize="@dimen/text_13sp"/>

                    </RadioGroup>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/ll_decode_way"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="4dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/ll_channel_num">

                    <TextView
                        android:id="@+id/tv_decode_way"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/decode_way"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_14sp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/rg_decode_way"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:checkedButton="@id/rbtn_stream_way">

                        <RadioButton
                            android:id="@+id/rbtn_stream_way"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/way_data_stream"
                            android:textSize="@dimen/text_13sp"/>

                        <RadioButton
                            android:id="@+id/rbtn_file_way"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/way_file"
                            android:textSize="@dimen/text_13sp"/>

                    </RadioGroup>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <CheckBox
                    android:id="@+id/cb_play_audio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/whether_play_audio"
                    android:textSize="@dimen/text_14sp"
                    android:textStyle="bold"
                    android:checked="true"
                    app:layout_constraintTop_toBottomOf="@+id/ll_decode_way"
                    app:layout_constraintStart_toStartOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <TextView
            android:id="@+id/tv_decode_param"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/decode_param"
            android:textColor="@color/black"
            android:textSize="@dimen/text_15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>