<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_audio_pp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_play_param"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/bg_corner_8_white_shape"
            android:padding="10dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ll_sample_rate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/tv_sample_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/audio_sample_rate"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_14sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinner_sample_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:entries="@array/sample_rate_list"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ll_channel_num"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/ll_sample_rate"
                app:layout_constraintStart_toStartOf="@+id/ll_sample_rate"
                app:layout_constraintEnd_toEndOf="@+id/ll_sample_rate">

                <TextView
                    android:id="@+id/tv_channel_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/channel_num"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_14sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/rg_channel_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:checkedButton="@id/rbtn_single_channel">

                    <RadioButton
                        android:id="@+id/rbtn_single_channel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/single_channel"
                        android:textSize="@dimen/text_13sp"/>

                    <RadioButton
                        android:id="@+id/rbtn_dual_channel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/dual_channel"
                        android:textSize="@dimen/text_13sp"/>

                </RadioGroup>
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_audio_pp"
        style="@style/CommonButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/audio_play"
        android:textSize="@dimen/text_16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>